# world-model-ladder

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/examples/: rssm-elbo.yaml  (+4 more)
data/: loader.py  normalization.py  pixel_dataset.py
evaluation/: pixel_metrics.py
models/: base.py  copy.py  factored_dynamics.py  factored_pixel_vae.py  factory.py  gru.py  linear.py  mlp.py  pixel_dynamics.py  pixel_rssm.py  pixel_vae.py  pixel_world_model.py  rssm.py  rssm_state.py
scripts/: dream_compare.py  eval.py  profile_summary.py  train.py  train_pixel_dynamics.py  train_pixel_vae.py  train_pixel_world_model.py
tests/: conftest.py  test_callbacks.py  test_checkpoint.py  test_config.py  test_dream.py  test_env.py  test_eval_metrics.py  test_factored_dynamics.py  test_factored_pixel_vae.py  test_integration.py  test_loader.py  test_logging.py  test_losses.py  test_models.py  test_normalization.py  test_physics.py  test_pixel_callbacks.py  test_pixel_datasets.py  test_pixel_dynamics.py  test_pixel_integration.py  test_pixel_loop.py  test_pixel_losses.py  test_pixel_metrics.py  test_pixel_rssm.py  test_pixel_vae.py  test_plotting.py  test_profile_summary.py  test_profiler.py  test_reporting.py  test_rollout.py  test_rssm.py  test_scheduling.py  test_torch_profiler.py  test_train_dynamics_script.py  test_training_loop.py
training/: callbacks.py  loop.py  losses.py  pixel_callbacks.py  pixel_loop.py  pixel_losses.py  profiler.py  rollout.py  scheduling.py  torch_profiler.py
utils/: checkpoint.py  config.py  logging.py  plotting.py  reporting.py
viz/: dream.py
(+4 files in other folders)
